Wed Mar 31 18:12:20 BST 2004 (njh)
----------------------------------
  * libclamav: Code tidy up - free memory earlier

Wed Mar 31 09:25:25 CEST 2004 (tk)
----------------------------------
  * libclamav: matcher: don't limit '*' to a single 128KB buffer

Tue Mar 30 23:57:33 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Better handling of multipart within multipart messages

Tue Mar 30 23:18:49 CEST 2004 (tk)
----------------------------------
  * clamav-milter: adapt Makefile to new directory structure
  * small code cleanup

Tue Mar 30 08:40:10 BST 2004 (trog)
-----------------------------------
  * clamav.conf, shared/cfgparser.c: recognise ReadTimeout option

Mon Mar 29 18:11:08 CEST 2004 (tk)
----------------------------------
  * shared/output.c: don't try to unlock free mutex (bug reported
		     by Nigel)

Mon Mar 29 16:17:05 BST 2004 (trog)
-----------------------------------
  * clamd: disable timeout when ReadTimeout=0

Mon Mar 29 15:45:15 BST 2004 (trog)
-----------------------------------
  * clamd: add support for ReadTimeout option

Mon Mar 29 10:33:52 BST 2004 (njh)
----------------------------------
  * libclamav:	Tidy up code and reduce shuffling of data

Mon Mar 29 02:05:39 CEST 2004 (tk)
----------------------------------
  * big cleanup: remove duplicated code and move it to /shared (fixes
		 a dependency problem when compiling with --disable-pthreads
		 and LogSyslog support in freshclam); eliminate warnings
  * libclamav: include backup snprintf implementation (patch by Phil Oleson
	       <oz*nixil.net>, snprintf by Patrick Powell)
  * clamd: fix clamd hangup when log size is exceeded (bug reported by
	   Ryan Thompson <clamav*sasknow.com>)
  * examples/ex1.c: update

Sat Mar 27 21:55:33 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Delay connection to clamd to handle clamd's timeout
	when the remote end (the end talking to sendmail) is slow

Sat Mar 27 19:55:52 CET 2004 (tk)