@@ -1,3 +1,7 @@
+Wed Mar 31 22:00:05 BST 2004 (njh)
+----------------------------------
+  * clamav-milter:	Handle new location of config file parser
+
 Wed Mar 31 18:12:20 BST 2004 (njh)
 ----------------------------------
   * libclamav: Code tidy up - free memory earlier
